--- a/geekshop/geekshop/templates/geekshop/includes/slider.html
+++ b/geekshop/geekshop/templates/geekshop/includes/slider.html
@@ -2,8 +2,8 @@
 			<div class="header clearfix">
 				<a href="/" class="logo"></a>
 				<ul class="menu">
-					<li><a href="{% url 'main' %}" class="active">домой</a></li>
-					<li><a href="{% url 'products' %}">продукты</a></li>
+					<li><a href="{% url 'main' %}" class="{% if request == '/'%}active{% endif %}">домой</a></li>
+					<li><a href="{% url 'products:main' %}">продукты</a></li>
 					<li><a href="{% url 'contacts' %}">контакты</a></li>
 				</ul>
 				<a href="#" class="search"></a>
