--- a/geekshop/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -5,28 +5,40 @@
         <li><a href="{% url 'products:main' %}">продукты</a></li>
         <li><a href="{% url 'contacts' %}">контакты</a></li>
         {% if user.is_authenticated %}
-            <li>
-                <a href="{% url 'auth:edit' %}">
-                    {{ user.first_name|default:'Пользователь' }}
-                </a>
+            <li class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <a>{{ user.first_name|default:'Пользователь' }}</a>
             </li>
-            {% if basket %}
-                <li><a href="{% url 'basket:view' %}">Корзина</a>
-                    <span>
-                                    {{ basket.0.total_cost|floatformat:0 }} руб.
-                                    ({{ basket.0.total_quantity }} шт.)
-                                </span>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li>
+                    <a class="dropdown-item" href="{% url 'auth:edit' %}">
+                        Профиль</a>
                 </li>
+                {% if user.is_superuser %}
+                    <li><a class="dropdown-item" href="{% url 'admin_staff:users' %}">Админка</a>
+                    </li>
+                {% endif %}
+                {% if basket %}
+                    <li><a class="dropdown-item" href="{% url 'basket:view' %}">Корзина</a>
+                    </li>
+                {% endif %}
+                    <li>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'auth:logout' %}">выйти</a>
+                        {% endif %}
+                    </li>
+            </ul>
 
+            {% if basket %}
+                <span>
+                    {{ basket.0.total_cost|floatformat:0 }} руб.
+                    ({{ basket.0.total_quantity }} шт.)
+                </span>
             {% endif %}
+
         {% endif %}
-        <li>
-            {% if user.is_authenticated %}
-                <a href="{% url 'auth:logout' %}">выйти</a>
-            {% else %}
-                <a href="{% url 'auth:login' %}">войти</a>
-            {% endif %}
-        </li>
+        {% if not user.is_authenticated %}
+            <a href="{% url 'auth:login' %}">войти</a>
+        {% endif %}
     </ul>
     <a href="#" class="search"></a>
 </div>
