--- a/geekshop/adminapp/templates/adminapp/categories.html
+++ b/geekshop/adminapp/templates/adminapp/categories.html
@@ -40,7 +40,7 @@
 {#                                    <a href="{% url 'admin_staff:product_read' product.pk %}">Detail</a>#}
                                 </td>
                                 <td class="text-center">
-{#                                    <a href="{% url 'admin_staff:product_update' product.pk %}">Edit</a>#}
+                                    <a href="{% url 'admin_staff:category_update' category.pk %}">Edit</a>
                                 </td>
                                 <td>
                                     <a {% if not category.is_active %} class="invisible" {% endif %} href="{#% url 'admin_staff:product_delete' pk=product.id %#}">
